.k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: af-location-ing
  labels:
    app: assignforce
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /location/(.+)
            backend:
              serviceName: af-location-svc
              servicePort: loc-http
